fix: :bug: fix overflowing of blog content

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
  
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
